--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "json-server": "json-server --watch store.json --port 3004",
+    "dev": "concurrently \"npm start\" \"npm run json-server\"",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,5 +36,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^5.1.0",
+    "json-server": "^0.16.1"
   }
 }
